syntax = "proto3";

package foo.bar;

option java_multiple_files = true;
option java_package = "com.example.foo.bar";
option java_outer_classname = "GreeterProtos";

service Greeter1 {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service Greeter2 {
  rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string msg = 1;
}

message HelloReply {
  string msg = 1;
}
